fixed contrast

--- a/lesson-8/styles/tablecss.css
+++ b/lesson-8/styles/tablecss.css
@@ -18,6 +18,7 @@ tr:first-child th,
 .highlight {
   background-color: #007bff;
   color: white;
+  font-weight: bold;
 }
 
 th,
